# test-p2c

./: .gitignore  00 Leeme.txt  CHANGELOG.md  README.md  Repository_tree.txt  pyproject.toml
examples/: basic_usage.py
p2c/: __init__.py  core.py
p2c.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_core.py
